hphp/hack/test/typecheck/reactive/rx_superglobals5.php
<?hh
<<__Rx>>
function f(): void {
  $a = $_FILES;
}
